retry lesson commit

--- a/_notebooks/homework/2025-09-21-1.1.ipynb
+++ b/_notebooks/homework/2025-09-21-1.1.ipynb
@@ -3,13 +3,16 @@
   {
    "cell_type": "raw",
    "id": "f32c7e6a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "layout: post\n",
     "toc: true\n",
     "title: Introduction to Algorithms, Programming, and Compilers\n",
-    "menu: nav/CSA_Nunits/csaunit1.html\n",
     "permalink: /csa/unit_01/1_1\n",
     "---"
    ]
