--- a/_notebooks/homework/2025-09-21-1.1.ipynb
+++ b/_notebooks/homework/2025-09-21-1.1.ipynb
@@ -741,16 +741,22 @@
     "- Steps must be in logical order\n",
     "\n",
     "\"\"\"\n",
-    "### Example Response:\n",
+    "### Response:\n",
     "\n",
-    "**Activity chosen:** [Write your activity here]\n",
+    "Activity Chosen: Making a pizza from scratch\n",
     "\n",
-    "**Algorithm:**\n",
-    "1. [Your first step]\n",
-    "2. [Your second step]\n",
-    "3. [Your third step]\n",
-    "4. [Continue...]\n",
-    "\"\"\""
+    "Algorithm:\n",
+    "1. Take out dough\n",
+    "2. Take out sauce\n",
+    "3. Take out cheese\n",
+    "4. Take out a spoon\n",
+    "5. Preheat the oven\n",
+    "5. Mold the dough into a circlular shape\n",
+    "6. Use the spoon to spread the sauce around the dough\n",
+    "7. Spread cheese evenly on top of the sauce\n",
+    "8. Place the concoction into the oven\n",
+    "9. Take out the pizza from the oven when the cheese is golden brown\n",
+    "10. Enjoy"
    ]
   },
   {
@@ -772,13 +778,15 @@
     "6. Write subject line\n",
     "```\n",
     "\n",
-    "### Example Response:\n",
+    "### Response:\n",
     "\n",
     "**Corrected Algorithm: Send an Email**\n",
-    "1. [Your corrected step 1]\n",
-    "2. [Your corrected step 2]\n",
-    "3. [Your corrected step 3]\n",
-    "4. [Continue...]\n",
+    "1. Open email application\n",
+    "2. Log into your account\n",
+    "3. Enter recipient's email address\n",
+    "4. Write subject line\n",
+    "5. Type the message\n",
+    "6. Click \"Send\"\n",
     "\n"
    ]
   },
@@ -809,10 +817,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "acec3f25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 1: A\n",
+      "Test 2: B\n",
+      "Test 3: C\n",
+      "Test 4: D\n",
+      "Test 5: F\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_grade(score1, score2, score3):\n",
     "    \"\"\"\n",
@@ -825,15 +845,22 @@
     "        grade: Letter grade (string)\n",
     "    \"\"\"\n",
     "    # TODO: Your code here!\n",
-    "    # Step 1: Add the three scores together\n",
+    "    total = score1 + score2 + score3\n",
     "    \n",
-    "    # Step 2: Calculate the average\n",
+    "    avg = total / 3\n",
     "    \n",
-    "    # Step 3: Determine the letter grade using if-elif-else\n",
+    "    if avg >= 90:\n",
+    "        grade = 'A'\n",
+    "    elif avg >= 80:\n",
+    "        grade = 'B'\n",
+    "    elif avg >= 70:\n",
+    "        grade = 'C'\n",
+    "    elif avg >= 60:\n",
+    "        grade = 'D'\n",
+    "    else:\n",
+    "        grade = 'F'\n",
     "    \n",
-    "    # Step 4: Return the grade\n",
-    "    \n",
-    "    pass  # Remove this when you add your code\n",
+    "    return grade\n",
     "\n",
     "# Test your function!\n",
     "print(\"Test 1:\", calculate_grade(95, 92, 88))  # Should be 'A'\n",
