--- a/_notebooks/homework/2025-09-21-1.2.ipynb
+++ b/_notebooks/homework/2025-09-21-1.2.ipynb
@@ -289,11 +289,29 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "cc9ff26e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Favorite food: Pizza\n",
+      "Age: 16\n",
+      "Height: 5.5 feet\n",
+      "Likes pizza: true\n",
+      "Favorite color starts with: B\n",
+      "Born in: 2008\n"
+     ]
+    }
+   ],
    "source": [
-    "```java\n",
     "// Practice #1 - Try it yourself first!\n",
     "public class MyFavoriteThings {\n",
     "    public static void main(String[] args) {\n",
@@ -315,7 +333,8 @@
     "        System.out.println(\"Born in: \" + BIRTH_YEAR);\n",
     "    }\n",
     "}\n",
-    "```"
+    "\n",
+    "MyFavoriteThings.main(new String[]{});"
    ]
   },
   {
@@ -449,8 +468,18 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "java (JJava/j!)",
+   "language": "java",
+   "name": "jbang-jjava"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
   }
  },
  "nbformat": 4,
