--- a/_notebooks/homework/2025-09-21-1.2.ipynb
+++ b/_notebooks/homework/2025-09-21-1.2.ipynb
@@ -289,6 +289,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b36dbd7",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "## My Work:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f5fefbfd",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite food: Spaghetti\n",
+      "My age: 16\n",
+      "My height: 5.1\n",
+      "I like pizza: true\n",
+      "The first initial of my favorite color: Y\n",
+      "My birth year: 2009\n"
+     ]
+    }
+   ],
+   "source": [
+    "String a_favoriteFood = \"Spaghetti\";\n",
+    "int a_age = 16;\n",
+    "double a_height = 5.10;\n",
+    "boolean a_likesPizza = true;\n",
+    "char a_firstInitialFavoriteColor = 'Y';\n",
+    "final int a_birthYear = 2009;\n",
+    "\n",
+    "System.out.println(\"My favorite food: \" + a_favoriteFood);\n",
+    "System.out.println(\"My age: \" +a_age);\n",
+    "System.out.println(\"My height: \" + a_height);\n",
+    "System.out.println(\"I like pizza: \" + a_likesPizza);\n",
+    "System.out.println(\"The first initial of my favorite color: \" + a_firstInitialFavoriteColor);\n",
+    "System.out.println(\"My birth year: \" + a_birthYear);\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "cc9ff26e",
@@ -360,6 +411,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30db9e0f",
+   "metadata": {},
+   "source": [
+    "## My Answers:\n",
+    "\n",
+    "1. integer\n",
+    "2. string\n",
+    "3. boolean\n",
+    "4. char\n",
+    "5. double\n",
+    "6. final integer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4e608306",
    "metadata": {},
    "source": [
@@ -416,6 +482,43 @@
     "### What to calculate:\n",
     "- Average of the three test scores\n",
     "- Show what letter grade they earned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65db54da",
+   "metadata": {},
+   "source": [
+    "## My Work: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "203983d3",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arnav scored an average of 96.0 in AP Computer Science A.\n"
+     ]
+    }
+   ],
+   "source": [
+    "final String studentName = \"Arnav\";\n",
+    "int test1 = 95;\n",
+    "int test2 = 97;\n",
+    "int test3 = 98;\n",
+    "final String className = \"AP Computer Science A\";\n",
+    "double average = (test1 + test2 + test3) / 3;\n",
+    "\n",
+    "System.out.println(studentName + \" scored an average of \" + average + \" in \" + className + \".\");"
    ]
   },
   {
