--- a/_notebooks/homework/2025-09-21-1.5-data_casting.ipynb
+++ b/_notebooks/homework/2025-09-21-1.5-data_casting.ipynb
@@ -43,7 +43,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "a71dbfec",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "int a = 5, b = 2;\n",
@@ -96,7 +100,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "003a0d13",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "public class CastDemo {\n",
@@ -151,7 +159,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "5a040b47",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "int max = Integer.MAX_VALUE;  //  2147483647\n",
@@ -178,7 +190,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "dc38675f",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -253,7 +269,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "135bdd65",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -302,7 +322,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "65a7a8ed",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "int a = 3, b = 2;\n",
@@ -326,7 +350,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "77e1b377",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "int a = 10, b = 4;\n",
@@ -348,7 +376,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "c61c2783",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "double d = -2.6;\n",
@@ -369,7 +401,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "e7df7f84",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "int x = Integer.MAX_VALUE;\n",
@@ -421,7 +457,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "f6de1e45",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -457,14 +497,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "73fd04b6",
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3.5"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "public static double avgInt(int a, int b) {\n",
-        "    // your code\n",
-        "}"
+        "    return (double)a / b;\n",
+        "}\n",
+        "\n",
+        "avgInt(7, 2);"
       ]
     },
     {
@@ -478,14 +535,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "fe8b95db",
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "90.69767441860465"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "public static double percent(int correct, int total) {\n",
-        "    // your code\n",
-        "}"
+        "    return (double)correct / total * 100;\n",
+        "}\n",
+        "\n",
+        "percent(78, 86 );"
       ]
     },
     {
@@ -501,7 +575,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "73def34d",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "public static int safeMod(int a, int b) {\n",
@@ -521,7 +599,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "2c7e6cea",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "// FRQ 1\n",
@@ -570,7 +652,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "a1d124c1",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "double x = 7.9;\n",
@@ -596,7 +682,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "849eae52",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "int a = 10;\n",
@@ -621,7 +711,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "e4e0d500",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "int num = 9 / 2;\n",
@@ -646,7 +740,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "80ecae51",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
       "outputs": [],
       "source": [
         "double d = 15.7;\n",
@@ -689,16 +787,12 @@
       "name": "jbang-jjava"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "java",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "codemirror_mode": "java",
+      "file_extension": ".jshell",
+      "mimetype": "text/x-java-source",
+      "name": "Java",
+      "pygments_lexer": "java",
+      "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
     }
   },
   "nbformat": 4,
