--- a/_notebooks/homework/2025-09-21-1.5-data_casting.ipynb
+++ b/_notebooks/homework/2025-09-21-1.5-data_casting.ipynb
@@ -41,14 +41,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "a71dbfec",
       "metadata": {
         "vscode": {
           "languageId": "java"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "2.5\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ],
       "source": [
         "int a = 5, b = 2;\n",
         "System.out.println(a / b);\n",
@@ -98,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "003a0d13",
       "metadata": {
         "vscode": {
@@ -157,14 +168,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "id": "5a040b47",
       "metadata": {
         "vscode": {
           "languageId": "java"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-2147483648\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2147483647\n"
+          ]
+        }
+      ],
       "source": [
         "int max = Integer.MAX_VALUE;  //  2147483647\n",
         "int min = Integer.MIN_VALUE;  // -2147483648\n",
@@ -188,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "id": "dc38675f",
       "metadata": {
         "vscode": {
@@ -197,15 +223,16 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "INT_MIN, INT_MAX: -2147483648 2147483647\n",
-            "Overflow examples:\n",
-            "MAX+1 = -2147483648\n",
-            "MIN-1 = 2147483647\n",
-            "(-7)/2  = -3   (-7)%2 = -1\n",
-            "(7)/-2  = -3   (7)%-2 = 1\n"
+          "ename": "CompilationException",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30m# Utilities to simulate Java 32-bit signed int in Python\u001b[0m",
+            "\u001b[1m\u001b[31millegal character: '#'\u001b[0m",
+            "",
+            "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m# Utilities to simulate\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30m Java 32-bit signed int in Python\u001b[0m",
+            "\u001b[1m\u001b[31m';' expected\u001b[0m",
+            ""
           ]
         }
       ],
@@ -497,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "73fd04b6",
       "metadata": {
         "vscode": {
@@ -535,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "fe8b95db",
       "metadata": {
         "vscode": {
@@ -580,11 +607,28 @@
           "languageId": "java"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "public static int safeMod(int a, int b) {\n",
-        "    // your code\n",
-        "}"
+        "    if (b == 0) {\n",
+        "        return b;\n",
+        "    } else {\n",
+        "        return a % b;\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "safeMod(5, 3)"
       ]
     },
     {
@@ -666,6 +710,14 @@
     },
     {
       "cell_type": "markdown",
+      "id": "825fbc14",
+      "metadata": {},
+      "source": [
+        "The answer is C"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "3a53b66e",
       "metadata": {},
       "source": [
@@ -695,6 +747,14 @@
     },
     {
       "cell_type": "markdown",
+      "id": "db4f8040",
+      "metadata": {},
+      "source": [
+        "The answer is E"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "4d25817a",
       "metadata": {},
       "source": [
@@ -720,6 +780,14 @@
       "source": [
         "int num = 9 / 2;\n",
         "System.out.println(num);"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c2cddd73",
+      "metadata": {},
+      "source": [
+        "The answer is B"
       ]
     },
     {
@@ -754,6 +822,14 @@
     },
     {
       "cell_type": "markdown",
+      "id": "47191343",
+      "metadata": {},
+      "source": [
+        "The answer is B"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "adf7f09b",
       "metadata": {},
       "source": [
@@ -764,6 +840,14 @@
         "C) Casting from int to double may result in loss of data  \n",
         "D) Casting is never necessary in Java  \n",
         "E) Casting from double to int always rounds to the nearest integer"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "abd23764",
+      "metadata": {},
+      "source": [
+        "The answer is B"
       ]
     },
     {
