--- a/_notebooks/homework/2025-09-21-1.6-operators-innovators.ipynb
+++ b/_notebooks/homework/2025-09-21-1.6-operators-innovators.ipynb
@@ -74,30 +74,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "72ae5a90",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "int playerScore = 1000;\n",
     "int playerHealth = 100;\n",
     "int enemiesDefeated = 0;\n",
     "\n",
     "// Player defeats an enemy worth 250 points\n",
-    "playerScore = playerScore + 250;\n",
+    "playerScore += 250;\n",
     "\n",
     "// Player takes 15 damage\n",
-    "playerHealth = playerHealth - 15;\n",
+    "playerHealth -= 15;\n",
     "\n",
     "// Enemy count goes up\n",
-    "enemiesDefeated = enemiesDefeated + 1;\n",
+    "enemiesDefeated ++;\n",
     "\n",
     "// Boss battle: double the current score!\n",
-    "playerScore = playerScore * 2;\n",
+    "playerScore *= 2;\n",
     "\n",
     "// Healing potion restores health to 80% of current\n",
-    "playerHealth = playerHealth * 4;\n",
-    "playerHealth = playerHealth / 5;  // 4/5 = 0.8, but we need integer math"
+    "playerHealth *= 4;\n",
+    "playerHealth /= 5;  // 4/5 = 0.8, but we need integer math"
    ]
   },
   {
@@ -112,7 +127,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1095fe00",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Example {\n",
@@ -163,6 +182,42 @@
     "2. Integer division: when you divide two ints, the fractional part is truncated. Be careful with ```/=```.\n",
     "\n",
     "3. Only post-form (```x++```, ```x--```) is in scope for the AP exam. Prefix forms (++x) are out of scope."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ddad9e55",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83\n",
+      "249\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class updateScore {\n",
+    "    public static void main(String[] args) {\n",
+    "        int score = 100;\n",
+    "        score -= 17;\n",
+    "        System.out.println(score);\n",
+    "        score *= 3;\n",
+    "        System.out.println(score);\n",
+    "        score %= 17;\n",
+    "        System.out.println(score);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "updateScore.main(new String[]{});"
    ]
   },
   {
@@ -316,17 +371,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java",
+   "display_name": "java (JJava/j!)",
    "language": "java",
-   "name": "java"
+   "name": "jbang-jjava"
   },
   "language_info": {
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
-   "version": "17.0.16+0"
+   "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
   }
  },
  "nbformat": 4,
