--- a/_notebooks/homework/2025-09-21-1.7-grinders-apis.ipynb
+++ b/_notebooks/homework/2025-09-21-1.7-grinders-apis.ipynb
@@ -56,7 +56,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -115,7 +119,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -172,7 +180,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -239,7 +251,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -295,9 +311,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[red, blue, yellow]\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "// Popcorn Hack #1: Complete this code\n",
     "\n",
@@ -305,20 +334,23 @@
     "\n",
     "public class PopcornHack1 {\n",
     "    public static void main(String[] args) {\n",
-    "        // TODO: Use Math.pow() to calculate 3^4\n",
+    "        Math.pow(3, 4);\n",
     "        \n",
-    "        // TODO: Use Math.sqrt() to find square root of 64\n",
+    "        Math.sqrt(64);\n",
     "        \n",
-    "        // TODO: Create ArrayList of Strings\n",
+    "        ArrayList<String> colors = new ArrayList<>();\n",
     "        \n",
-    "        // TODO: Add 3 colors (\"red\", \"blue\", \"green\")\n",
+    "        colors.add(\"red\");\n",
+    "        colors.add(\"blue\");\n",
+    "        colors.add(\"yellow\");\n",
     "        \n",
-    "        // TODO: Print the size\n",
+    "        System.out.println(colors);\n",
+    "        System.out.println(colors.size());\n",
     "        \n",
     "    }\n",
     "}\n",
     "\n",
-    "// PopcornHack1.main(null);"
+    "PopcornHack1.main(null);"
    ]
   },
   {
@@ -346,7 +378,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -419,8 +455,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -504,25 +544,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 46,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arnav - Title: example - pages: 479\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n"
+     ]
+    }
+   ],
    "source": [
     "// Popcorn Hack #2: Complete the Book class\n",
     "\n",
     "public class Book {\n",
     "    // TODO: Add 3 attributes (title, author, pages)\n",
-    "    \n",
+    "    private String title;\n",
+    "    private String author;\n",
+    "    private int pages;\n",
     "    // TODO: Add constructor\n",
-    "    \n",
+    "    public Book(String title, String author, int pages) {\n",
+    "        this.title = title;\n",
+    "        this.author = author;\n",
+    "        this.pages = pages;\n",
+    "    }\n",
     "    // TODO: Add displayInfo() method\n",
-    "    \n",
+    "    public void displayInfo() {\n",
+    "        System.out.println(author + \" - Title: \" + title + \" - pages: \" + pages);\n",
+    "    }\n",
     "    // TODO: Add isLong() method (returns true if pages > 300)\n",
-    "    \n",
+    "    public boolean isLong() {\n",
+    "        return pages > 300;\n",
+    "    }\n",
     "}\n",
     "\n",
     "// TODO: Create a Book object and test all methods\n",
-    "// Example: Book myBook = new Book(\"Java Basics\", \"John Doe\", 350);\n"
+    "// Example: Book myBook = new Book(\"Java Basics\", \"John Doe\", 350);\n",
+    "Book example = new Book(\"example\", \"Arnav\", 479);\n",
+    "example.displayInfo();\n",
+    "System.out.println(example.isLong());"
    ]
   },
   {
@@ -559,17 +631,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java",
+   "display_name": "java (JJava/j!)",
    "language": "java",
-   "name": "java"
+   "name": "jbang-jjava"
   },
   "language_info": {
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.12"
+   "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
   }
  },
  "nbformat": 4,
