finished 1.6 and some other lesson stuff

--- a/_notebooks/homework/2025-09-21-1.6-operators-innovators.ipynb
+++ b/_notebooks/homework/2025-09-21-1.6-operators-innovators.ipynb
@@ -356,6 +356,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "49a9dc83",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Bank Account Simulation ===\n",
+      "Starting Cash: $5000.0\n",
+      "Recieved a paycheck!\n",
+      "Current Cash: $6500.0 (+ $1500)\n",
+      "Bought a MacBook\n",
+      "Current Cash: $5200.0 (MacBook cost $1300)\n",
+      "Rent is due\n",
+      "End of Month Cash: $3200.0 (Inflation hits :( -$2000)\n",
+      "=== Simulation Complete ===\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class bankAccount {\n",
+    "    static void main(String[] args) {\n",
+    "        System.out.println(\"=== Bank Account Simulation ===\");\n",
+    "        double Cash = 5000.0;\n",
+    "        System.out.println(\"Starting Cash: $\" + Cash);\n",
+    "        System.out.println(\"Recieved a paycheck!\");\n",
+    "        Cash += 1500;\n",
+    "        System.out.println(\"Current Cash: $\" + Cash + \" (+ $1500)\");\n",
+    "        System.out.println(\"Bought a MacBook\");\n",
+    "        Cash -= 1300;\n",
+    "        System.out.println(\"Current Cash: $\" + Cash + \" (MacBook cost $1300)\");\n",
+    "        System.out.println(\"Rent is due\");\n",
+    "        Cash -= 2000;\n",
+    "        System.out.println(\"End of Month Cash: $\" + Cash + \" (Inflation hits :( -$2000)\");\n",
+    "        System.out.println(\"=== Simulation Complete ===\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "bankAccount.main(new String[]{});"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dc8347e5",
    "metadata": {},
