--- a/_notebooks/homework/2025-09-21-1.9-method_signatures-applicators.ipynb
+++ b/_notebooks/homework/2025-09-21-1.9-method_signatures-applicators.ipynb
@@ -171,6 +171,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b47585ab",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "-2\n",
+      "3.5\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class PopcornMax {\n",
+    "    static int max(int a, int b) {\n",
+    "        if (a > b) {\n",
+    "            return a;\n",
+    "        } else {\n",
+    "            return b;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    static double max(double a, double b) {\n",
+    "        if (a > b) {\n",
+    "            return a;\n",
+    "        } else {\n",
+    "            return b;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        System.out.println(max(3, 9));      // expected: 9\n",
+    "        System.out.println(max(-2, -7));    // expected: -2\n",
+    "        System.out.println(max(3.5, 2.9));  // expected: 3.5\n",
+    "        System.out.println(max(2, 2.0));    // should call double version → 2.0\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "PopcornMax.main(new String[]{});"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ee7ff3d4",
    "metadata": {},
@@ -379,8 +429,18 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "java (JJava/j!)",
+   "language": "java",
+   "name": "jbang-jjava"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
   }
  },
  "nbformat": 4,
