--- a/_notebooks/homework/2025-09-21-1.10-class_methods.ipynb
+++ b/_notebooks/homework/2025-09-21-1.10-class_methods.ipynb
@@ -56,11 +56,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "code_example_cell",
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Printer {\n",
@@ -91,11 +87,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bafc9591",
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Dude {\n",
@@ -125,11 +117,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "56f7808d",
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Bro {\n",
@@ -217,152 +205,8 @@
     "\n",
     "|                   | Static Variable      | Non-Static Variable   |\n",
     "|-------------------|-------------|---------------|\n",
-    "| **In static (Class) method**   | ✅ Can use  | ❌ Cannot use |\n",
-    "| **In instance method** | ✅ Can use  | ✅ Can use    |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4dae9cad",
-   "metadata": {},
-   "source": [
-    "## Homework Hacks - Calling class methods"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 1 — Fix the Bro Code\n",
-    "\n",
-    "### Instructions\n",
-    "The `Bro` class has both static and instance methods.  \n",
-    "Your job: fix the code so it runs without errors and prints correctly.\n",
-    "\n",
-    "**Steps:**\n",
-    "1. Read the code below.  \n",
-    "2. Identify which lines cause errors and why.  \n",
-    "3. Fix the broken lines so it prints:\n",
-    "```\n",
-    "My name is Kush\n",
-    "Sup bro?\n",
-    "```\n",
-    "\n",
-    "**Hint:**  \n",
-    "- You can call a static method using the class name.  \n",
-    "- You can call a non-static (instance) method only with an object."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class Bro {\n",
-    "    String name;\n",
-    "    static String classicBroSaying = \"Sup bro?\";\n",
-    "\n",
-    "    public Bro(String name) {\n",
-    "        this.name = name;\n",
-    "    }\n",
-    "\n",
-    "    public void sayMyName() {\n",
-    "        System.out.println(\"My name is \" + name);\n",
-    "    }\n",
-    "\n",
-    "    public static void sayClassicBroSaying() {\n",
-    "        System.out.println(classicBroSaying);\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "public class Main {\n",
-    "    public static void main(String[] args) {\n",
-    "        // TODO: Fix these method calls\n",
-    "        Bro.sayMyName(); // won't work\n",
-    "        Bro.sayClassicBroSaying(); // works\n",
-    "\n",
-    "        Bro kush = new Bro(\"Kush\");\n",
-    "        // TODO: Add the correct calls here\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Homework Hack: Bro Methods & Static Power (Part 2)\n",
-    "\n",
-    "### Instructions\n",
-    "In the lesson, you learned that **static methods and variables belong to the class**, not any single object.  \n",
-    "Let’s put that to the test by building a **Bro Club** that keeps track of how many Bros exist — using static features to share information across all Bros.\n",
-    "\n",
-    "**Your goal:**  \n",
-    "Use a static variable and static methods to manage the club’s membership.\n",
-    "\n",
-    "**Steps:**\n",
-    "1. Add a static variable in `BroClub` to count how many Bros have joined.  \n",
-    "2. Add a static method to register a Bro (increase the count).  \n",
-    "3. Add another static method to display how many total Bros are in the club.  \n",
-    "4. Modify the `Bro` constructor so each new Bro automatically registers in the club.  \n",
-    "5. In `main()`, create multiple Bros and print the total.\n",
-    "\n",
-    "**Hint:**  \n",
-    "Remember — static variables and methods are called with the class name, not the object.  \n",
-    "Example:  \n",
-    "`BroClub.showTotalBros();`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class Bro {\n",
-    "    String name;\n",
-    "\n",
-    "    public Bro(String name) {\n",
-    "        this.name = name;\n",
-    "        // TODO: Register this Bro in the club using a static method\n",
-    "    }\n",
-    "\n",
-    "    public void sayMyName() {\n",
-    "        System.out.println(\"Yo, I'm \" + name);\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "class BroClub {\n",
-    "    // TODO: Add a static variable to count total Bros\n",
-    "    // TODO: Add a static method to register a Bro\n",
-    "    // TODO: Add a static method to show total Bros\n",
-    "}\n",
-    "\n",
-    "public class Main {\n",
-    "    public static void main(String[] args) {\n",
-    "        // TODO: Create at least two Bros\n",
-    "        // TODO: Use the static method to display the total Bros\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## REMEMBER\n",
-    "### Why It Connects to the Lesson\n",
-    "This exercise SHOULD help you see the difference between **calling methods from the class** (static) and **calling methods from an object** (instance).  \n",
-    "You’ll understand why one of these lines causes an error — and how to fix it by using the correct call style."
+    "| **In static (Class) method**   | ✅  | ❌ |\n",
+    "| **In instance method** | ✅  | ✅   |"
    ]
   }
  ],
@@ -376,7 +220,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.16+8"
   }
