--- a/_notebooks/homework/2025-09-21-1.7-grinders-apis-homework.ipynb
+++ b/_notebooks/homework/2025-09-21-1.7-grinders-apis-homework.ipynb
@@ -60,9 +60,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brand: iPhone\n",
+      "Model: 17\n",
+      "Battery: 72\n",
+      "Contacts: [Ahaan, Shaurya, Xavier]\n",
+      "Brand: Samsung\n",
+      "Model: 14\n",
+      "Battery: 18\n",
+      "Contacts: [Spencer, Neil, Nikhil]\n"
+     ]
+    }
+   ],
    "source": [
     "// Homework Hack: Complete the Phone class\n",
     "\n",
@@ -70,50 +89,88 @@
     "\n",
     "public class Phone {\n",
     "    // TODO: Add 4 attributes\n",
+    "    private String brand;\n",
+    "    private int model;\n",
+    "    private int batteryLevel;\n",
+    "    private ArrayList<String> contacts;\n",
     "    \n",
     "    // TODO: Add constructor\n",
+    "    public Phone(String brand, int model, int batteryLevel, ArrayList<String> contacts) {\n",
+    "        this.brand = brand;\n",
+    "        this.model = model;\n",
+    "        this.batteryLevel = batteryLevel;\n",
+    "        this.contacts = contacts;\n",
+    "    }\n",
     "    \n",
     "    // TODO: Add displayInfo() method\n",
+    "    public void displayInfo() {\n",
+    "        System.out.println(\"Brand: \" + brand);\n",
+    "        System.out.println(\"Model: \" + model);\n",
+    "        System.out.println(\"Battery: \" + batteryLevel);\n",
+    "    }\n",
     "    \n",
     "    // TODO: Add addContact(String name) method\n",
+    "    public void addContact(String name) {\n",
+    "        contacts.add(name);\n",
+    "    }\n",
     "    \n",
     "    // TODO: Add showContacts() method\n",
+    "    public void showContacts() {\n",
+    "        System.out.println(\"Contacts: \" + contacts);\n",
+    "    }\n",
     "    \n",
     "    // TODO: Add usePhone(int minutes) method\n",
-    "    \n",
+    "    public void usePhone(int minutes) {\n",
+    "        batteryLevel -= minutes;\n",
+    "    }\n",
     "}\n",
     "\n",
     "// Test your Phone class\n",
     "public class PhoneTest {\n",
     "    public static void main(String[] args) {\n",
     "        // TODO: Create 2 Phone objects\n",
+    "        Phone ex1 = new Phone(\"iPhone\", 17, 84, new ArrayList<>());\n",
+    "        Phone ex2 = new Phone(\"Samsung\", 14, 57, new ArrayList<>());\n",
     "        \n",
     "        // TODO: Add 3 contacts to each\n",
-    "        \n",
+    "        ex1.addContact(\"Ahaan\");\n",
+    "        ex1.addContact(\"Shaurya\");\n",
+    "        ex1.addContact(\"Xavier\");\n",
+    "        ex2.addContact(\"Spencer\");\n",
+    "        ex2.addContact(\"Neil\");\n",
+    "        ex2.addContact(\"Nikhil\");\n",
+    "\n",
     "        // TODO: Use phones for some minutes\n",
-    "        \n",
+    "        ex1.usePhone(12);\n",
+    "        ex2.usePhone(39);\n",
+    "\n",
+    "\n",
     "        // TODO: Display all information\n",
-    "        \n",
+    "        ex1.displayInfo();\n",
+    "        ex1.showContacts();\n",
+    "        ex2.displayInfo();\n",
+    "        ex2.showContacts();\n",
     "    }\n",
     "}\n",
     "\n",
-    "// PhoneTest.main(null);"
+    "// PhoneTest.main(null);\n",
+    "PhoneTest.main(null);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java",
+   "display_name": "java (JJava/j!)",
    "language": "java",
-   "name": "java"
+   "name": "jbang-jjava"
   },
   "language_info": {
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.12"
+   "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
   }
  },
  "nbformat": 4,
