--- a/_notebooks/homework/2025-09-21-1.9-Method_Signatures-Homework-applicators.ipynb
+++ b/_notebooks/homework/2025-09-21-1.9-Method_Signatures-Homework-applicators.ipynb
@@ -34,11 +34,15 @@
         "- C) `int f(int a)` and `double f(double a)`\n",
         "- D) `int f(int a, int b)` and `int f(int a, int b)`\n",
         "\n",
+        "### My Answer: C\n",
+        "\n",
         "2) Which is the AP CSA notion of a method signature?\n",
         "- A) `public static int max(int a, int b)`\n",
         "- B) `max(int, int)`\n",
         "- C) `max(int a, int b) throws Exception`\n",
         "- D) `max(int, double)`\n",
+        "\n",
+        "### My Answer: B\n",
         "\n",
         "3) With the overloads `void p(int x)` and `void p(double x)`, what prints?\n",
         "```java\n",
@@ -50,6 +54,8 @@
         "- C) `int`, `int`\n",
         "- D) Compile error\n",
         "\n",
+        "### My Answer: A\n",
+        "\n",
         "4) Which call is ambiguous with only these two methods?\n",
         "```java\n",
         "void h(long x) {}\n",
@@ -60,11 +66,15 @@
         "- C) `h(5f)`\n",
         "- D) None are ambiguous\n",
         "\n",
+        "### My Answer: A\n",
+        "\n",
         "5) Which statement is TRUE?\n",
         "- A) Parameter names affect the method signature.\n",
         "- B) Return type affects the method signature.\n",
         "- C) Access modifiers affect the method signature.\n",
-        "- D) Overloading requires different parameter lists.\n"
+        "- D) Overloading requires different parameter lists.\n",
+        "\n",
+        "### My Answer: D"
       ]
     },
     {
@@ -74,6 +84,17 @@
         "### Short answer\n",
         "- Explain why `int sum(int a, int b)` and `double sum(int a, int b)` cannot both exist.\n",
         "- In one sentence, distinguish parameters vs arguments.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### My Answers:\n",
+        "\n",
+        "Both of these sum methods cannot exist because they have the same method signature and therefore Java cannot differentiate between them when one of them is called.\n",
+        "\n",
+        "Parameters are essentially variables that the method requires / asks for and arguments are the variables that are given to it in response."
       ]
     },
     {
@@ -99,6 +120,65 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "int\n",
+            "long\n",
+            "double\n"
+          ]
+        }
+      ],
+      "source": [
+        "public class codingTasks {\n",
+        "    static int abs(int x) {\n",
+        "        if (x > 0) {\n",
+        "            return x;\n",
+        "        } else {\n",
+        "            return -x;\n",
+        "        }\n",
+        "    }\n",
+        "\n",
+        "    static double abs(double x) {\n",
+        "        if (x > 0) {\n",
+        "            return x;\n",
+        "        } else {\n",
+        "            return -x;\n",
+        "        }\n",
+        "    }\n",
+        "\n",
+        "    static long abs(long x) {\n",
+        "        if (x > 0) {\n",
+        "            return x;\n",
+        "        } else {\n",
+        "            return -x;\n",
+        "        }\n",
+        "    }\n",
+        "\n",
+        "    static void show(int x) { System.out.println(\"int\"); }\n",
+        "    static void show(double x) { System.out.println(\"double\"); }\n",
+        "    static void show(long x) { System.out.println(\"long\"); }\n",
+        "\n",
+        "    public static void main(String[] args) {\n",
+        "        show(7);    // prints \"int\"\n",
+        "        show(7L);   // prints \"long\"\n",
+        "        show(7.0);  // prints \"double\"\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "codingTasks.main(new String[]{})"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -111,6 +191,79 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "1\n",
+            "15\n",
+            "20.0\n",
+            "10\n"
+          ]
+        }
+      ],
+      "source": [
+        "public class FRQTasks {\n",
+        "    static int indexOf(char target, String s) {\n",
+        "        for (int i = 0; i < s.length(); i++) {\n",
+        "            if (s.charAt(i) == target) return i;\n",
+        "        }\n",
+        "        return -1;\n",
+        "    }\n",
+        "\n",
+        "    static int indexOf(String target, String s) {\n",
+        "        for (int i = 0; i <= s.length() - target.length(); i++) {\n",
+        "            int j = 0;\n",
+        "            while (j < target.length() && s.charAt(i + j) == target.charAt(j)) j++;\n",
+        "            if (j == target.length()) return i;\n",
+        "        }\n",
+        "        return -1;\n",
+        "    }\n",
+        "\n",
+        "    static int clamp(int value, int low, int high) {\n",
+        "        if (low > high) {\n",
+        "            int t = low;\n",
+        "            low = high;\n",
+        "            high = t;\n",
+        "        }\n",
+        "        if (value < low) return low;\n",
+        "        if (value > high) return high;\n",
+        "        return value;\n",
+        "    }\n",
+        "\n",
+        "    static double clamp(double value, double low, double high) {\n",
+        "        if (low > high) {\n",
+        "            double t = low;\n",
+        "            low = high;\n",
+        "            high = t;\n",
+        "        }\n",
+        "        if (value < low) return low;\n",
+        "        if (value > high) return high;\n",
+        "        return value;\n",
+        "    }\n",
+        "\n",
+        "    public static void main(String[] args) {\n",
+        "        System.out.println(indexOf('a', \"banana\"));\n",
+        "        System.out.println(indexOf(\"ana\", \"banana\"));\n",
+        "        System.out.println(clamp(15, 10, 20));\n",
+        "        System.out.println(clamp(25.5, 10.0, 20.0));\n",
+        "        System.out.println(clamp(5, 20, 10));\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "FRQTasks.main(new String[]{})"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -119,16 +272,21 @@
         "- This notebook executes top-to-bottom with outputs visible.\n",
         "- Answers are clear and concise.\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": "java (JJava/j!)",
+      "language": "java",
+      "name": "jbang-jjava"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": "java",
+      "file_extension": ".jshell",
+      "mimetype": "text/x-java-source",
+      "name": "Java",
+      "pygments_lexer": "java",
+      "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
     }
   },
   "nbformat": 4,
