--- a/_notebooks/homework/2025-09-21-1.9-method_signatures-applicators.ipynb
+++ b/_notebooks/homework/2025-09-21-1.9-method_signatures-applicators.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "b47585ab",
    "metadata": {
     "vscode": {
@@ -272,6 +272,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2e8c99c1",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int: 42\n",
+      "str: hello\n",
+      "str: A!\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class PopcornPrint {\n",
+    "    // TODO: write print(int n)\n",
+    "    static void print(int n) {\n",
+    "        System.out.println(\"int: \" + n);\n",
+    "    }\n",
+    "    // TODO: write print(String s)\n",
+    "    static void print(String s) {\n",
+    "        System.out.println(\"str: \" + s);\n",
+    "    }\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        print(42);          // expected: int:42\n",
+    "        print(\"hello\");     // expected: str:hello\n",
+    "        print('A' + \"!\");   // char + String → String → expected: str:A!\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "PopcornPrint.main(new String[]{})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "06f80cba",
    "metadata": {},
@@ -307,38 +348,62 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "db66fefa",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7022fca7",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "28.274333882308138\n",
+      "12\n",
+      "45/50\n",
+      "92.4%\n"
+     ]
+    }
+   ],
    "source": [
-    "### FRQ-style runnable templates\n",
-    "Instructions:Practice FRQ-style overloaded methods. Implement sumRange, overloaded area (circle and rectangle), and overloaded formatScore (fraction and percent).\n",
-    "```java\n",
     "public class FrqTemplates {\n",
     "    // FRQ 1\n",
     "    // TODO: implement sumRange(start, end) — sum inclusive, return 0 if start > end\n",
     "    public static int sumRange(int start, int end) {\n",
-    "        return 0; // placeholder\n",
+    "        if (start > end) return 0;\n",
+    "        int sum = 0;\n",
+    "        for (int n = start; n <= end; n++) {\n",
+    "            sum += n;\n",
+    "        }\n",
+    "        return sum;\n",
     "    }\n",
     "\n",
     "    // FRQ 2\n",
     "    // TODO: implement area(radius) -> circle area (double)\n",
     "    // TODO: implement area(width, height) -> rectangle area (int)\n",
     "    public static double area(double radius) {\n",
-    "        return 0.0; // placeholder\n",
+    "        return radius * radius * Math.PI;\n",
     "    }\n",
+    "\n",
     "    public static int area(int width, int height) {\n",
-    "        return 0; // placeholder\n",
+    "        return width * height;\n",
     "    }\n",
     "\n",
     "    // FRQ 3\n",
     "    // TODO: implement formatScore(earned, total) -> \"earned/total\"\n",
     "    // TODO: implement formatScore(percent) -> \"xx.x%\"\n",
     "    public static String formatScore(int earned, int total) {\n",
-    "        return \"\"; // placeholder\n",
+    "        // returns something like \"45/50\"\n",
+    "        return earned + \"/\" + total;\n",
     "    }\n",
+    "\n",
     "    public static String formatScore(double percent) {\n",
-    "        return \"\"; // placeholder\n",
+    "        // returns something like \"92.4%\"\n",
+    "        return String.format(\"%.1f%%\", percent);\n",
     "    }\n",
     "\n",
     "    public static void main(String[] args) {\n",
@@ -350,7 +415,17 @@
     "    }\n",
     "}\n",
     "\n",
-    "```\n"
+    "// Run\n",
+    "FrqTemplates.main(new String[]{});\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db66fefa",
+   "metadata": {},
+   "source": [
+    "### FRQ-style runnable templates\n",
+    "Instructions:Practice FRQ-style overloaded methods. Implement sumRange, overloaded area (circle and rectangle), and overloaded formatScore (fraction and percent)."
    ]
   },
   {
