--- a/_notebooks/homework/2025-09-21-1.8.ipynb
+++ b/_notebooks/homework/2025-09-21-1.8.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ac434458",
    "metadata": {
     "vscode": {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7486d57e",
    "metadata": {
     "vscode": {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a0d8c9d2",
    "metadata": {
     "vscode": {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9de83950",
    "metadata": {
     "vscode": {
@@ -383,7 +383,26 @@
     "**Task:** The following code has poor documentation. Rewrite it with proper Javadoc comments including preconditions and postconditions.\n",
     "\n",
     "```java\n",
-    "// Does stuff with numbers\n",
+    "/** Sorts through an array of numbers and returns the sum of the positive even integers\n",
+    " * \n",
+    " * Goes through @param nums and adds each number that is greater than 0 and evenly divisible by 2 to a total\n",
+    " * Returns that total at the end of the method\n",
+    " * \n",
+    " * Preconditions:\n",
+    " * - @param nums cannot be null\n",
+    " * \n",
+    " * Postconditions:\n",
+    " * - the sum of the positive numbers is returned \n",
+    " * \n",
+    " * @param nums is the array of numbers that is sorted through\n",
+    " * @return sum of positive numbers\n",
+    " * \n",
+    " * Example Usage:\n",
+    " * int[] nums = {1, 4, -7, 8, 2};\n",
+    " * int sum = doSomething(nums); // sum = 15\n",
+    " * System.out.println(sum); // outputs 15\n",
+    " * \n",
+    " */\n",
     "public int doSomething(int[] nums) {\n",
     "    int result = 0;\n",
     "    for (int i = 0; i < nums.length; i++) {\n",
@@ -469,18 +488,60 @@
     "// TODO: Add your class-level Javadoc here!\n",
     "// Hint: Start with /** and end with */\n",
     "\n",
+    "/**\n",
+    " * Manages each grade a student gets\n",
+    " * Calculates final grade based on category weightage \n",
+    " * \n",
+    " * Allows one to track their grades throughout a schoolyear\n",
+    " * \n",
+    " * Key methods:\n",
+    " * - adds an assignment and its grade into its category\n",
+    " * - changes the weightage of a category\n",
+    " * - calculates the final grade based on each grade while taking into account the category weightage\n",
+    " * - generates a report of all the grades for a student\n",
+    " * \n",
+    " * Usage example:\n",
+    " * GradeBook studentGrades = new GradeBook();\n",
+    " * studentGrades.setCategoryWeight(\"Homework\", 0.2);\n",
+    " * studentGrades.setCategoryWeight(\"Tests\", 0.3);\n",
+    " * studentGrades.addAssignment(\"Tests\", \"Test 3: Newton's Laws\", 120);\n",
+    " * double finalGrade = studnetGrades.calculateFinalGrade()'\n",
+    " * \n",
+    " * @author Arnav Mittal\n",
+    " * @version 1.0\n",
+    " * @since 2025-10-13\n",
+    " */ \n",
     "public class GradeBook {\n",
     "    private HashMap<String, Double> assignments;\n",
     "    private HashMap<String, Double> categoryWeights;\n",
     "    private double extraCredit;\n",
     "    \n",
     "    // TODO: Document each method too!\n",
+    "    /**\n",
+    "     * Adds an assignment to a category\n",
+    "     * \n",
+    "     * @param category selects the category to enter your assignment into\n",
+    "     * @param name is the name of your assignment\n",
+    "     * @param score is the grade you recieved on the assignment out of 100\n",
+    "     */ \n",
     "    public void addAssignment(String category, String name, double score) { }\n",
     "    \n",
+    "    /**\n",
+    "     * Changes the weightage of a category\n",
+    "     * \n",
+    "     * @param category selects the category to edit\n",
+    "     * @param weight is the weightage to give to the category\n",
+    "     */ \n",
     "    public void setCategoryWeight(String category, double weight) { }\n",
     "    \n",
+    "    /**\n",
+    "     * Calculates a student's overall grade based on assignments in their categories\n",
+    "     */ \n",
     "    public double calculateFinalGrade() { }\n",
     "    \n",
+    "    /**\n",
+    "     * Generates a report of a student's grades\n",
+    "     */ \n",
     "    public String generateReport() { }\n",
     "}"
    ]
@@ -605,6 +666,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15f9ca2c",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "/**\n",
+    " * Allows you to find the sum of predefined variables as well as the sum of user-entered variables\n",
+    " * \n",
+    " * Key features:\n",
+    " * - initializes integers and prints their sum\n",
+    " * - has a {@code add} method that can sum user-inputted integers\n",
+    " * \n",
+    " * Usage example:\n",
+    " * stuff.main(new String[]{});\n",
+    " * int result = stuff.add(5, 12); // result = 17\n",
+    " * System.out.prinln(result); // outputs 17\n",
+    " */\n",
+    "public class stuff {\n",
+    "    /**\n",
+    "     * Initalizes two variables and outputs their sum\n",
+    "     */\n",
+    "    public static void main(String args[]) {\n",
+    "        int x = 5;\n",
+    "        int y = 10;\n",
+    "        int z = add(x, y);\n",
+    "        System.out.println(\"ans is \" + z)\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "     * Gets two variables through user input adds them\n",
+    "     * \n",
+    "     * @param a is an integer added\n",
+    "     * @param b is an integer added\n",
+    "     * @return a + b \n",
+    "     */\n",
+    "    static int add(int a, int b) {\n",
+    "        return a + b;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cd681f6",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e981abd1",
+   "metadata": {},
+   "source": [
+    "I added a description of the overall purpose of the class and each of its methods as well as example usage of the class and described parameters and returns whenever necessary."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cace0026",
    "metadata": {},
@@ -637,7 +765,6 @@
     "    return true;\n",
     "}\n",
     "\n",
-    "\n",
     "### Part 3: Reflection Questions \n",
     "1. Why is documentation more important in team projects than solo projects?\n",
     "2. Give an example of when a method SHOULD be documented and when it SHOULD NOT.\n",
@@ -645,6 +772,68 @@
     "**Submit:** A Jupyter notebook or Java file with all three parts completed.\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7450e7b5",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "/**\n",
+    " * Tries to add a student to a selected course in a specific sememster based on their studentId\n",
+    " * \n",
+    " * Preconditions:\n",
+    " * - studentId is valid\n",
+    " * - courseCode is valid\n",
+    " * - course is not full\n",
+    " * - no schedule conflict\n",
+    " * - prerequisites are filled\n",
+    " * \n",
+    " * Postconditions:\n",
+    " * - student is added to course for certain semester\n",
+    " * \n",
+    " * Example usage:\n",
+    " * - enrollStudent(\"1968012, \"18869\", 2\") \n",
+    " * \n",
+    " * @param studentId is the id of the student given by the school\n",
+    " * @param courseCode is the identifying number of the course\n",
+    " * @param semester is the semester in which the student wants to join the calss\n",
+    " * @return true if student is successfully added \n",
+    " */\n",
+    "public boolean enrollStudent(String studentId, String courseCode, int semester) {\n",
+    "    Student student = findStudentById(studentId);\n",
+    "    if (student == null) return false;\n",
+    "\n",
+    "    Course course = findCourseByCode(courseCode);\n",
+    "    if (course == null) return false;\n",
+    "\n",
+    "    if (course.isFull()) return false;\n",
+    "    if (student.hasScheduleConflict(course)) return false;\n",
+    "    if (!student.hasPrerequisites(course)) return false;\n",
+    "    if (student.getCreditHours() + course.getCreditHours() > 18) return false;\n",
+    "\n",
+    "    student.addCourse(course);\n",
+    "    course.addStudent(student);\n",
+    "    recordEnrollmentTransaction(studentId, courseCode, semester);\n",
+    "    return true;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee1ddc47",
+   "metadata": {},
+   "source": [
+    "### Part 3\n",
+    "\n",
+    "1. Documentation is far more important in team projects than solo because in a solo project you will likely know what your code does or at least what you intend for it to do, while in a team project others may not know what a variable or method is used for, for example, and then they will need to refer to your documentation.\n",
+    "2. An example where you shouldn't document is when code is extremely simple with detailed variable names to the point where doing documentation would be like writing the method. An example where you should document is when a code is not immediately understandable or contains weird variable names or something of that sort, where people may need extra help understanding what each part does."
    ]
   },
   {
@@ -702,9 +891,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java",
+   "display_name": "java (JJava/j!)",
    "language": "java",
-   "name": "java"
+   "name": "jbang-jjava"
   },
   "language_info": {
    "codemirror_mode": "java",
@@ -712,7 +901,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "17.0.16+8-Ubuntu-0ubuntu122.04.1"
+   "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
   }
  },
  "nbformat": 4,
