tons of hw stuff

--- a/_notebooks/homework/2025-09-21-1.10-class_methods.ipynb
+++ b/_notebooks/homework/2025-09-21-1.10-class_methods.ipynb
@@ -56,7 +56,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "code_example_cell",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "class Printer {\n",
@@ -87,7 +91,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bafc9591",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "class Dude {\n",
@@ -115,10 +123,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "56f7808d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is kush\n",
+      "Sup bro?\n"
+     ]
+    },
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m\u001b[1m\u001b[30m\u001b[41mBro.sayMyName\u001b[0m\u001b[1m\u001b[30m(); // This will NOT work! because sayMyName is NOT a STATIC method.\u001b[0m",
+      "\u001b[1m\u001b[31mnon-static method sayMyName() cannot be referenced from a static context\u001b[0m",
+      ""
+     ]
+    }
+   ],
    "source": [
     "class Bro {\n",
     "    String name;\n",
@@ -165,7 +196,18 @@
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey, I'm Bro\n",
+      "Sup bro?\n",
+      "Hey, I'm Alex\n",
+      "Sup bro?\n"
+     ]
+    }
+   ],
    "source": [
     "class Bro {\n",
     "    String name;\n",
@@ -179,6 +221,10 @@
     "        System.out.println(\"Hey, I'm \" + name);\n",
     "    }\n",
     "\n",
+    "    public static void staticSayHi() {\n",
+    "        System.out.println(\"Hey, I'm Bro\");\n",
+    "    }\n",
+    "\n",
     "    public static void sayCatchphrase() {\n",
     "        System.out.println(catchphrase);\n",
     "    }\n",
@@ -186,14 +232,17 @@
     "\n",
     "public class Main {\n",
     "    public static void main(String[] args) {\n",
-    "        Bro.sayHi(); // ??\n",
-    "        Bro.sayCatchphrase(); // ??\n",
+    "        // Bro.sayHi(); Doesn't work - static calling on instance\n",
+    "        Bro.staticSayHi(); // Fixed by adding a static hi method for static Bro\n",
+    "        Bro.sayCatchphrase(); // Works - all static\n",
     "        \n",
     "        Bro alex = new Bro(\"Alex\");\n",
-    "        alex.sayHi(); // ??\n",
-    "        alex.sayCatchphrase(); // ??\n",
+    "        alex.sayHi(); // Works - instance calling on instance\n",
+    "        alex.sayCatchphrase(); // Works - instance calling on static\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "Main.main(new String[]{});"
    ]
   },
   {
@@ -220,9 +269,9 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
-   "version": "17.0.16+8"
+   "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
   }
  },
  "nbformat": 4,
