--- a/_notebooks/homework/2025-09-21-1.10-class_methods_homework.ipynb
+++ b/_notebooks/homework/2025-09-21-1.10-class_methods_homework.ipynb
@@ -65,12 +65,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "73c91681",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alpha has: 100 health, 20 power, and Laser\n",
+      "Beta has: 100 health, 15 power, and Missile\n",
+      "Stronger fighter: Alpha\n",
+      "Fact: Combined power = 35, combined health = 200\n",
+      "Alpha fights Beta\n",
+      "Alpha attacks Beta with Laser\n",
+      "Beta attacks Alpha with Missile\n",
+      "Alpha attacks Beta with Laser\n",
+      "Beta attacks Alpha with Missile\n",
+      "Alpha attacks Beta with Laser\n",
+      "Beta attacks Alpha with Missile\n",
+      "Alpha attacks Beta with Laser\n",
+      "Beta attacks Alpha with Missile\n",
+      "Alpha attacks Beta with Laser\n",
+      "The battle has ended\n",
+      "Alpha won\n"
+     ]
+    }
+   ],
    "source": [
-    "// Code Here"
+    "// Code Here\n",
+    "class Robot {\n",
+    "    String name;\n",
+    "    int power;\n",
+    "    int health;\n",
+    "    String weapon;\n",
+    "\n",
+    "    public Robot(String name, int power, int health, String weapon) {\n",
+    "        this.name = name;\n",
+    "        this.power = power;\n",
+    "        this.health = health;\n",
+    "        this.weapon = weapon;\n",
+    "    }\n",
+    "\n",
+    "    static double fightDuration = 0.0;\n",
+    "\n",
+    "    public void attack(Robot enemy) {\n",
+    "        System.out.println(name + \" attacks \" + enemy.name + \" with \" + weapon);\n",
+    "        enemy.health -= power;\n",
+    "        if (enemy.health < 0) {\n",
+    "            enemy.health = 0;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void printStatus() {\n",
+    "        System.out.println(name + \" has: \" + health + \" health, \" + power + \" power, and \" + weapon);\n",
+    "    }\n",
+    "\n",
+    "    public void heal() {\n",
+    "        System.out.println(name + \" heals for 10\");\n",
+    "        health += 10;\n",
+    "    }\n",
+    "\n",
+    "    public static Robot strongerFighter(Robot r1, Robot r2) {\n",
+    "        if (r1.power > r2.power) {\n",
+    "            return r1;\n",
+    "        } else {\n",
+    "            return r2;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static void beginBattle(Robot r1, Robot r2) {\n",
+    "        System.out.println(r1.name + \" fights \" + r2.name);\n",
+    "        double fightDuration = 0.0;\n",
+    "        while (r1.health > 0 && r2.health > 0) {\n",
+    "            r1.attack(r2);\n",
+    "            if (r2.health <= 0) break;\n",
+    "            r2.attack(r1);\n",
+    "            fightDuration += 5;\n",
+    "        }\n",
+    "        System.out.println(\"The battle has ended\");\n",
+    "        if (r1.health > 0) {\n",
+    "            System.out.println(r1.name + \" won\");\n",
+    "        } else {\n",
+    "            System.out.println(r2.name + \" won\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static void printFact(Robot r1, Robot r2) {\n",
+    "        int combinedPower = r1.power + r2.power;\n",
+    "        int combinedHealth = r1.health + r2.health;\n",
+    "        System.out.println(\"Fact: Combined power = \" + combinedPower + \", combined health = \" + combinedHealth);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        Robot alpha = new Robot(\"Alpha\", 20, 100, \"Laser\");\n",
+    "        Robot beta = new Robot(\"Beta\", 15, 100, \"Missile\");\n",
+    "\n",
+    "        alpha.printStatus();\n",
+    "        beta.printStatus();\n",
+    "\n",
+    "        Robot stronger = Robot.strongerFighter(alpha, beta);\n",
+    "        System.out.println(\"Stronger fighter: \" + stronger.name);\n",
+    "\n",
+    "        Robot.printFact(alpha, beta);\n",
+    "\n",
+    "        Robot.beginBattle(alpha, beta);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "Main.main(new String[]{});"
    ]
   }
  ],
@@ -84,9 +194,9 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
-   "version": "17.0.16+0"
+   "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
   }
  },
  "nbformat": 4,
