--- a/_notebooks/homework/2025-09-21-1.10-class_methods.ipynb
+++ b/_notebooks/homework/2025-09-21-1.10-class_methods.ipynb
@@ -54,14 +54,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "code_example_cell",
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    },
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m\u001b[1m\u001b[30m\u001b[41mPrinter.explode\u001b[0m\u001b[1m\u001b[30m(); // This will NOT work!\u001b[0m",
+      "\u001b[1m\u001b[31mnon-static method explode() cannot be referenced from a static context\u001b[0m",
+      ""
+     ]
+    }
+   ],
    "source": [
     "class Printer {\n",
     "    // This IS a CLASS METHOD. It can be called WITHOUT creating an instance.\n",
@@ -123,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "56f7808d",
    "metadata": {
     "vscode": {
