--- a/_notebooks/homework/2025-10-12-1.13-object_creationGrinders.ipynb
+++ b/_notebooks/homework/2025-10-12-1.13-object_creationGrinders.ipynb
@@ -368,9 +368,11 @@
     },
     {
       "cell_type": "markdown",
-      "id": "ce54cb18",
+      "id": "f357aebf",
       "metadata": {},
-      "source": []
+      "source": [
+        "Changing b doesn't affect a because both b and a are smaller data types (integers) and are therefore primitives. This means that they store their actual values instead of an address saved on the heap that stores their values. Because of this, it changes its actual value rather than the data saved an address referenced by both variables. array2 and array1 both reference the same address stored on the heap and therefore a change will affect both because it changes the value stored in the address."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -505,15 +507,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Before: 21 16\n",
-            "After: 16 21\n",
-            "\n",
-            "Before: 16 21\n",
-            "After: 16 21\n",
-            "\n",
-            "Before: 16 -1\n",
-            "After: -1 16\n",
-            "\n"
+            "Before: 5\n",
+            "After: 15\n"
           ]
         }
       ],
@@ -540,7 +535,9 @@
         "        changeValue(myNumber); // pass object reference\n",
         "        System.out.println(\"After: \" + myNumber.value); // 15\n",
         "    }\n",
-        "}"
+        "}\n",
+        "\n",
+        "PassByReferenceDemo.main(new String[]{});"
       ]
     },
     {
@@ -554,14 +551,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 4,
       "id": "5e56fb28",
       "metadata": {
         "vscode": {
           "languageId": "java"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Before birthday: John is 20\n",
+            "Inside method: John is now 21\n",
+            "After birthday: John is 21\n",
+            "\n",
+            "Before reassign: John is 21\n",
+            "Inside reassign: New Person is 99\n",
+            "After reassign: John is 21\n"
+          ]
+        }
+      ],
       "source": [
         "public class PersonDemo {\n",
         "    static class Person {\n",
@@ -595,7 +606,17 @@
         "        reassignPerson(john);\n",
         "        System.out.println(\"After reassign: \" + john.name + \" is \" + john.age);\n",
         "    }\n",
-        "}"
+        "}\n",
+        "\n",
+        "PersonDemo.main(new String[]{})"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "669aeabc",
+      "metadata": {},
+      "source": [
+        "The birthday won't show the proper before and after while the name will."
       ]
     },
     {
@@ -606,10 +627,11 @@
         "## Questions:\n",
         "\n",
         "1. After haveBirthday(john) is called, what is John's age? Why?\n",
-        "\n",
+        "    - John's age is now 21 because the command references a variable that is stored on the heap and changes the value that is stored in the address.\n",
         "2. After reassignPerson(john) is called, what is John's name and age? Why?\n",
-        "\n",
-        "3. Explain the difference between modifying an object's contents vs. reassigning a reference."
+        "    - reassignPerson only changes the value directly of the new person and so the name and age of John don't change from John and 21, respectively.\n",
+        "3. Explain the difference between modifying an object's contents vs. reassigning a reference.\n",
+        "    - Modifying an object's contents will change that object's content as well as other things that reference that same address while reassigning an address will change the specific object only."
       ]
     },
     {
