--- a/_notebooks/homework/2025-09-21-1.10-class_methods.ipynb
+++ b/_notebooks/homework/2025-09-21-1.10-class_methods.ipynb
@@ -14,7 +14,7 @@
     "toc: true\n",
     "title: Calling Class Methods\n",
     "menu: nav/CSA_Nunits/csaunit1.html\n",
-    "permalink: /csa/unit_01/1_10\n",
+    "permalink: www\n",
     "author: Trevor, Kush, Elliot, Aranya, Travis, Alex\n",
     "---"
    ]
