--- a/_notebooks/homework/2025-09-21-1.14-callinginstances-innovators.ipynb
+++ b/_notebooks/homework/2025-09-21-1.14-callinginstances-innovators.ipynb
@@ -129,9 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4b07c3d9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -182,18 +186,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d06eb4f1",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My dog Fido 2.0 is a Doge!\n"
+     ]
+    }
+   ],
    "source": [
     "public class Dog {\n",
-    "\n",
     "    // ADD CODE HERE\n",
+    "    private String name;\n",
+    "    private String breed;\n",
+    "    public Dog(String name, String breed) {\n",
+    "        this.name = name;\n",
+    "        this.breed = breed;\n",
+    "    }\n",
+    "    public void dogInfo() {\n",
+    "        System.out.println(\"My dog \" + name + \" is a \" + breed + \"!\");\n",
+    "    }\n",
     "}\n",
     "\n",
     "// To use it:\n",
-    "// ADD CODE HERE"
+    "// ADD CODE HERE\n",
+    "Dog myDog = new Dog(\"Fido 2.0\", \"Doge\");\n",
+    "myDog.dogInfo();"
    ]
   },
   {
@@ -250,19 +276,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b81314b8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "public class Counter {\n",
     "    private int count;\n",
-    "    \n",
-    "    // ADD CODE HERE\n",
+    "    public void add(int x) {\n",
+    "        count += x;\n",
+    "    }\n",
+    "    public void subtract(int x) {\n",
+    "        count -= x;\n",
+    "    }\n",
+    "    public void multiply(int x) {\n",
+    "        count *= x;\n",
+    "    }\n",
+    "    public void divide(double x) {\n",
+    "        count /= x;\n",
+    "    }\n",
+    "    public int getCount() {\n",
+    "        return count;\n",
+    "    }\n",
     "}\n",
     "\n",
     "// Use it:\n",
-    "// ADD CODE HERE"
+    "Counter c = new Counter();\n",
+    "c.add(5);\n",
+    "c.subtract(2);\n",
+    "c.multiply(15);\n",
+    "c.divide(9);\n",
+    "int val = c.getCount();\n",
+    "System.out.println(val);"
    ]
   },
   {
@@ -637,9 +694,9 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
-   "version": "21.0.8+9-Ubuntu-0ubuntu124.04.1"
+   "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
   }
  },
  "nbformat": 4,
