--- a/_notebooks/homework/2025-09-21-1.14-callinginstances-homework-innovators.ipynb
+++ b/_notebooks/homework/2025-09-21-1.14-callinginstances-homework-innovators.ipynb
@@ -52,20 +52,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "29ee7d7f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My dog Fido 2.0 is a Doge!\n"
+     ]
+    }
+   ],
    "source": [
-    "// Work by [Your Name Here]\n",
+    "// Work by [Arnav Mittal]\n",
     "\n",
     "public class Dog {\n",
-    "\n",
     "    // ADD CODE HERE\n",
+    "    private String name;\n",
+    "    private String breed;\n",
+    "    public Dog(String name, String breed) {\n",
+    "        this.name = name;\n",
+    "        this.breed = breed;\n",
+    "    }\n",
+    "    public void dogInfo() {\n",
+    "        System.out.println(\"My dog \" + name + \" is a \" + breed + \"!\");\n",
+    "    }\n",
     "}\n",
     "\n",
     "// To use it:\n",
-    "// ADD CODE HERE"
+    "// ADD CODE HERE\n",
+    "Dog myDog = new Dog(\"Fido 2.0\", \"Doge\");\n",
+    "myDog.dogInfo();"
    ]
   },
   {
@@ -101,21 +123,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "53e562e0",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "// Work by [Your Name Here]\n",
+    "// Work by [Arnav Mittal]\n",
     "\n",
     "public class Counter {\n",
     "    private int count;\n",
-    "    \n",
-    "    // ADD CODE HERE\n",
+    "    public void add(int x) {\n",
+    "        count += x;\n",
+    "    }\n",
+    "    public void subtract(int x) {\n",
+    "        count -= x;\n",
+    "    }\n",
+    "    public void multiply(int x) {\n",
+    "        count *= x;\n",
+    "    }\n",
+    "    public void divide(double x) {\n",
+    "        count /= x;\n",
+    "    }\n",
+    "    public int getCount() {\n",
+    "        return count;\n",
+    "    }\n",
     "}\n",
     "\n",
     "// Use it:\n",
-    "// ADD CODE HERE"
+    "Counter c = new Counter();\n",
+    "c.add(5);\n",
+    "c.subtract(2);\n",
+    "c.multiply(15);\n",
+    "c.divide(9);\n",
+    "int val = c.getCount();\n",
+    "System.out.println(val);"
    ]
   },
   {
@@ -469,6 +522,187 @@
     "\n",
     "---\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "56d27851",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Student Grade Tracker System ===\n",
+      "\n",
+      "Creating student: Emma Rodriguez\n",
+      "Student created successfully!\n",
+      "\n",
+      "--- Adding Grades for Emma ---\n",
+      "Adding grade: 95 points\n",
+      "Adding grade: 88 points\n",
+      "Adding grade: 92 points\n",
+      "Adding grade: 85 points\n",
+      "\n",
+      "--- Emma's Grade Report ---\n",
+      "Student Name: Emma Rodriguez\n",
+      "Total Points: 360\n",
+      "Assignments Completed: 4\n",
+      "Current Average: 90.00\n",
+      "Letter Grade: A\n",
+      "Status: Excellent work!\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Creating student: James Wilson\n",
+      "Student created successfully!\n",
+      "\n",
+      "--- Adding Grades for James ---\n",
+      "Adding grade: 78 points\n",
+      "Adding grade: 82 points\n",
+      "Adding grade: 75 points\n",
+      "\n",
+      "--- James's Grade Report ---\n",
+      "Student Name: James Wilson\n",
+      "Total Points: 235\n",
+      "Assignments Completed: 3\n",
+      "Current Average: 78.33\n",
+      "Letter Grade: C\n",
+      "Status: Keep working hard!\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Final Summary:\n",
+      "Emma Rodriguez - Average: 90.00 (A)\n",
+      "James Wilson - Average: 78.33 (C)\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Student {\n",
+    "    String name;\n",
+    "    int totalPoints;\n",
+    "    int numAssignments;\n",
+    "\n",
+    "    // Sets the student's name and initializes point totals\n",
+    "    public Student(String name) {\n",
+    "        this.name = name;\n",
+    "        totalPoints = 0;\n",
+    "        numAssignments = 0;\n",
+    "    }\n",
+    "\n",
+    "    // Adds a new grade and updates total points and assignment count\n",
+    "    public void addGrade(int points) {\n",
+    "        totalPoints += points;\n",
+    "        numAssignments++;\n",
+    "        System.out.println(\"Adding grade: \" + points + \" points\");\n",
+    "    }\n",
+    "\n",
+    "    // Calculates and returns the student's average score\n",
+    "    public double getAverage() {\n",
+    "        if (numAssignments == 0) return 0;\n",
+    "        return (double) totalPoints / numAssignments;\n",
+    "    }\n",
+    "\n",
+    "    // Determines the letter grade based on the student's average\n",
+    "    public String getLetterGrade() {\n",
+    "        double avg = getAverage();\n",
+    "        if (avg >= 90) return \"A\";\n",
+    "        else if (avg >= 80) return \"B\";\n",
+    "        else if (avg >= 70) return \"C\";\n",
+    "        else if (avg >= 60) return \"D\";\n",
+    "        else return \"F\";\n",
+    "    }\n",
+    "\n",
+    "    // Prints a detailed grade report with performance feedback\n",
+    "    public void printReport() {\n",
+    "        double avg = getAverage();\n",
+    "        String letter = getLetterGrade();\n",
+    "        System.out.println(\"Student Name: \" + name);\n",
+    "        System.out.println(\"Total Points: \" + totalPoints);\n",
+    "        System.out.println(\"Assignments Completed: \" + numAssignments);\n",
+    "        System.out.println(\"Current Average: \" + String.format(\"%.2f\", avg));\n",
+    "        System.out.println(\"Letter Grade: \" + letter);\n",
+    "        if (letter.equals(\"A\")) System.out.println(\"Status: Excellent work!\");\n",
+    "        else if (letter.equals(\"B\")) System.out.println(\"Status: Good job!\");\n",
+    "        else if (letter.equals(\"C\")) System.out.println(\"Status: Keep working hard!\");\n",
+    "        else if (letter.equals(\"D\")) System.out.println(\"Status: Needs improvement!\");\n",
+    "        else System.out.println(\"Status: Failing - seek help!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class GradeTracker {\n",
+    "    // Main method: creates students, adds grades, and prints reports\n",
+    "    public static void main(String[] args) {\n",
+    "        System.out.println(\"=== Student Grade Tracker System ===\\n\");\n",
+    "\n",
+    "        System.out.println(\"Creating student: Emma Rodriguez\");\n",
+    "        Student s1 = new Student(\"Emma Rodriguez\");\n",
+    "        System.out.println(\"Student created successfully!\\n\");\n",
+    "\n",
+    "        System.out.println(\"--- Adding Grades for Emma ---\");\n",
+    "        s1.addGrade(95);\n",
+    "        s1.addGrade(88);\n",
+    "        s1.addGrade(92);\n",
+    "        s1.addGrade(85);\n",
+    "\n",
+    "        System.out.println(\"\\n--- Emma's Grade Report ---\");\n",
+    "        s1.printReport();\n",
+    "\n",
+    "        System.out.println(\"\\n========================================\\n\");\n",
+    "\n",
+    "        System.out.println(\"Creating student: James Wilson\");\n",
+    "        Student s2 = new Student(\"James Wilson\");\n",
+    "        System.out.println(\"Student created successfully!\\n\");\n",
+    "\n",
+    "        System.out.println(\"--- Adding Grades for James ---\");\n",
+    "        s2.addGrade(78);\n",
+    "        s2.addGrade(82);\n",
+    "        s2.addGrade(75);\n",
+    "\n",
+    "        System.out.println(\"\\n--- James's Grade Report ---\");\n",
+    "        s2.printReport();\n",
+    "\n",
+    "        System.out.println(\"\\n========================================\\n\");\n",
+    "\n",
+    "        System.out.println(\"Final Summary:\");\n",
+    "        System.out.println(s1.name + \" - Average: \" + String.format(\"%.2f\", s1.getAverage()) + \" (\" + s1.getLetterGrade() + \")\");\n",
+    "        System.out.println(s2.name + \" - Average: \" + String.format(\"%.2f\", s2.getAverage()) + \" (\" + s2.getLetterGrade() + \")\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Runs the GradeTracker main method\n",
+    "GradeTracker.main(null);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac721f65",
+   "metadata": {},
+   "source": [
+    "## Grading Rubric\n",
+    "\n",
+    "| Criteria | Percent Weight | Description |\n",
+    "|----------|---------------|-------------|\n",
+    "| **Functionality** | 40% | Program runs without errors, creates multiple Student objects, correctly adds grades, calculates averages, and assigns letter grades |\n",
+    "| **Method Implementation** | 30% | Includes all required methods (addGrade, getAverage, getLetterGrade, printReport) that properly access/modify instance variables |\n",
+    "| **Code Quality** | 20% | Clean code with meaningful variable names, proper constructor, and helpful comments explaining method purposes |\n",
+    "| **Output & Presentation** | 10% | Clear, well-formatted output showing multiple students with different grades and formatted reports |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4608d161",
+   "metadata": {},
+   "source": [
+    "I believe that I deserve .9 on the homework hack because I have all of the functionality required with each method working, I have each method added that was mentioned, and I also have meaningful variable names and simple comments that explain each method. My output is also clean and easy to follow.\n",
+    "\n",
+    "(All of my code and output is above)"
+   ]
   }
  ],
  "metadata": {
@@ -481,9 +715,9 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
-   "version": "21.0.8+9-Ubuntu-0ubuntu124.04.1"
+   "version": "17.0.16+8-Ubuntu-0ubuntu124.04.1"
   }
  },
  "nbformat": 4,
